[tool.poetry]
name = "google-calendar-fastapi"
version = "0.1.0"
description = "google-calender-task"
authors = ["RazzaqShikalgar <ayubshikalgar2@gmail.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.78.0"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"
google-auth = "^2.32.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.138.0"
google = "^3.0.0"
pytest = "^8.3.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
